update: movie-box-app

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <title>Movie Box</title>
 </head>
 <body class="movie_box">
-<script src="../js/window.functions.js"></script>
-<script src="../js/partial.js"></script>
-<script src="../js/don.js"></script>
-<script src="../js/jquery.js"></script>
-<script src="../js/data.js"></script>
-<script src="../js/app.js"></script>
+<script src="/js/window.functions.js"></script>
+<script src="/js/partial.js"></script>
+<script src="/js/don.js"></script>
+<script src="/js/jquery.js"></script>
+<script src="/js/data.js"></script>
+<script src="/js/app.js"></script>
 </body>
 </html>
